fix: hide sidebar overflow

--- a/styles.css
+++ b/styles.css
@@ -31,9 +31,15 @@ body {
   background-color: rgba(30.6, 79.05, 53.55, 1.0);
   height: 100%;
   margin: 0;
-  overflow: hidden;
   /* border: solid rebeccapurple 10px; */
   user-select: none;
+}
+
+#app {
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+  width: 100%;
 }
 
 * {
@@ -52,9 +58,11 @@ html {
 canvas {
   /* border: solid salmon 1px; */
   /* border: solid var(--card-gold) 1px; */
+  height: 100%;
   position: relative;
-  z-index: 0;
   transition: transform 0.25s ease;
+  width: 100%;
+  z-index: 0;
 }
 
 #info {
@@ -87,6 +95,7 @@ canvas {
   position: absolute;
   right: -144px;
   height: 100%;
+  top: 0;
   transition: transform 0.25s ease;
   width: 144px;
 }
@@ -166,4 +175,9 @@ option {
   padding-bottom: 0.125em;
   align-items: center;
   justify-content: center;
+}
+
+.message {
+  color: #fffe;
+  padding: 0.5em;
 }
